Salesforce Fundamentals/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() -  DOB__c )/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <label>Married</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Only_Male_Student</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sex__c</field>
            <operation>equals</operation>
            <value>M</value>
        </filters>
        <label>Only Male Student</label>
    </listViews>
    <listViews>
        <fullName>X11th_Class_Student</fullName>
        <columns>NAME</columns>
        <columns>Age__c</columns>
        <columns>DOB__c</columns>
        <columns>Class__c</columns>
        <columns>FirstName__c</columns>
        <columns>Married__c</columns>
        <columns>Sex__c</columns>
        <columns>Spouse_Name__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <label>11th Class Student</label>
    </listViews>
    <listViews>
        <fullName>Xth_Class_Student</fullName>
        <columns>NAME</columns>
        <columns>Age__c</columns>
        <columns>DOB__c</columns>
        <columns>Class__c</columns>
        <columns>FirstName__c</columns>
        <columns>Married__c</columns>
        <columns>Sex__c</columns>
        <columns>Spouse_Name__c</columns>
        <columns>Email__c</columns>
        <columns>LastName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>101th Class Student</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>